@@ -1,7 +1,6 @@
 // Copyright 2018 Yahoo Holdings. Licensed under the terms of the Apache 2.0 license. See LICENSE in the project root.
 package com.yahoo.vespa.hosted.controller.application;
 
-import com.google.common.collect.ImmutableSet;
 import com.yahoo.config.provision.ApplicationId;
 import com.yahoo.config.provision.NodeType;
 import com.yahoo.config.provision.zone.ZoneId;
@@ -14,7 +13,8 @@ import java.util.Set;
 import java.util.stream.Collectors;
 
 /**
- * This represents a system-level application in hosted Vespa. E.g. the zone-application.
+ * This represents a system-level application in hosted Vespa. All infrastructure nodes in a hosted Vespa zones are
+ * allocated to a system application.
  *
  * @author mpolden
  */
@@ -23,7 +23,7 @@ public enum SystemApplication {
     configServerHost(ApplicationId.from("hosted-vespa", "configserver-host", "default"), NodeType.confighost),
     proxyHost(ApplicationId.from("hosted-vespa", "proxy-host", "default"), NodeType.proxyhost),
     configServer(ApplicationId.from("hosted-vespa", "zone-config-servers", "default"), NodeType.config, configServerHost),
-    zone(ApplicationId.from("hosted-vespa", "routing", "default"), ImmutableSet.of(NodeType.proxy, NodeType.host),
+    zone(ApplicationId.from("hosted-vespa", "routing", "default"), Set.of(NodeType.proxy, NodeType.host),
          configServerHost, proxyHost, configServer);
 
     private final ApplicationId id;
@@ -39,7 +39,7 @@ public enum SystemApplication {
             throw new IllegalArgumentException("Node types must be non-empty");
         }
         this.id = id;
-        this.nodeTypes = ImmutableSet.copyOf(nodeTypes);
+        this.nodeTypes = Set.copyOf(nodeTypes);
         this.dependencies = List.of(dependencies);
     }
 
